# prela-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  test.yml
docs/: SDK_LOCAL_TESTING.md  SDK_VS_CLOUD_FEATURES.md
examples/: README.md  anthropic_instrumentation.py  assertions_demo.py  auto_instrument_multi_agent_demo.py  autogen_instrumentation.py  cli_demo.py  compact_show_demo.py  console_exporter_demo.py  convenience_shortcuts_demo.py  crewai_instrumentation.py  eval_runner_demo.py  eval_suite_demo.py  exporters_demo.py  file_exporter_demo.py  http_exporter_example.py  interactive_list_demo.py  langchain_instrumentation.py  llamaindex_instrumentation.py  multi_agent_assertions_example.py  n8n_code_node_examples.py  n8n_eval_example.py  n8n_webhook_example.py  n8n_webhook_simple.py  replay_api_calls_example.py  reporters_demo.py  swarm_instrumentation.py  trace_decorator_demo.py
prela/: __init__.py  _version.py  license.py
prela/contrib/: CLI.md  README.md  __init__.py  cli.py  explorer.py
prela/core/: __init__.py  clock.py  context.py  replay.py  sampler.py  span.py  tracer.py
prela/evals/: __init__.py  case.py  runner.py  suite.py
prela/evals/assertions/: README.md  __init__.py  base.py  multi_agent.py  semantic.py  structural.py  tool.py
prela/evals/n8n/: __init__.py  assertions.py  runner.py
prela/evals/reporters/: README.md  __init__.py  console.py  json.py  junit.py
prela/exporters/: __init__.py  base.py  console.py  file.py  http.py  multi.py  otlp.py
prela/instrumentation/: ANTHROPIC.md  LANGCHAIN.md  OPENAI.md  __init__.py  anthropic.py  auto.py  base.py  langchain.py  llamaindex.py  openai.py
prela/instrumentation/multi_agent/: __init__.py  autogen.py  crewai.py  langgraph.py  (+2 more)
prela/replay/: __init__.py  comparison.py  engine.py  loader.py  result.py
tests/: __init__.py  test_auto_instrument.py  test_cli.py  test_clock.py  test_context.py  test_init.py  test_license.py  test_n8n_init.py  test_replay.py  test_replay_api_calls.py  test_replay_comparison.py  test_replay_engine.py  test_replay_fallback_similarity.py  test_replay_loader.py  test_replay_tool_retrieval_execution.py  test_sampler.py  test_span.py  test_tracer.py
tests/test_evals/: __init__.py  test_assertions.py  test_case.py  test_n8n_assertions.py  test_n8n_runner.py  test_reporters.py  test_runner.py  test_suite.py
tests/test_exporters/: test_console.py  test_file.py  test_http.py  test_multi.py  test_otlp.py
tests/test_instrumentation/: test_anthropic.py  test_anthropic_replay.py  test_autogen.py  test_crewai.py  test_langchain.py  test_langchain_replay.py  test_langgraph.py  test_llamaindex.py  test_llamaindex_replay.py  test_multi_agent_replay.py  test_n8n_code_node.py  test_n8n_webhook.py  test_openai.py  test_swarm.py
(+4 files in other folders)
